# global-security-policy-intelligence

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  GTD Time Series.ipynb  LICENSE  NOTICE.md  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  global_terror_attacks.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: README.md  data_contract.yaml  feature_store.yaml  rag_eval_questions.yaml  wandb_sweep.yaml
db/: README.md  schema.sql
docker/: Dockerfile.api  Dockerfile.frontend  README.md
docs/: README.md  architecture.md  complexity.md  curriculum_map.md  ethics.md  extreme_blueprint.md  mcp.md  methodology.md  research_agenda.md
docs/model_cards/: README.md  severity_model.md
docs/research/: README.md  (+3 more)
frontend/: README.md  index.html  package-lock.json  package.json
notebooks/: 00_project_overview.ipynb  01_data_engineering_quality.ipynb  02_eda_visual_analytics.ipynb  03_geospatial_forecasting.ipynb  04_adaptive_severity.ipynb  05_feature_store_ml_baselines.ipynb  06_ml_experiment_benchmark.ipynb  07_deep_learning_lab.ipynb  08_graph_analytics.ipynb  09_rag_mcp_safety.ipynb  10_policy_research_panel.ipynb  11_monitoring_drift_mlops.ipynb  README.md
scripts/: README.md  build_artifacts.ps1  build_notebooks.py  extreme_build.ps1  run_api.ps1  train_severity.ps1
src/: README.md
tests/: README.md  test_api.py  test_cleaning.py  test_documentation_style.py  test_dsa_graph.py  test_extreme_mode.py  test_policy.py  test_rag_mcp_wandb.py
(+60 files in other folders)
