[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtd-ai-systems-capstone"
version = "0.1.0"
description = "MIT-grade Global Terrorism Database analytics, AI, graph, RAG, and MLOps capstone."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pandas>=2.1",
  "numpy>=1.26",
  "pyarrow>=14",
  "openpyxl>=3.1",
  "scikit-learn>=1.4",
  "statsmodels>=0.14",
  "plotly>=5.20",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "wandb>=0.16",
  "joblib>=1.3",
  "pydantic>=2.6",
  "httpx>=0.27",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
bigdata = ["pyspark>=3.5"]
graph = ["neo4j>=5.19"]
vector = ["qdrant-client>=1.9", "sentence-transformers>=2.7"]
explain = ["shap>=0.45"]
deep = ["tensorflow>=2.16", "torch>=2.2"]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10", "nbformat>=5.10", "nbclient>=0.10", "ipykernel>=6.29"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
